# M3U8Quicker

./: .gitignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
.github/scripts/: create-release.mjs
.github/workflows/: release.yml
browser-extension/chrome/: README.md  background.js  content.js  manifest.json
browser-extension/chrome/injects/: bilibili.js  douyin.js  registry.js
browser-extension/firefox/: background.js  content.js  manifest.json
browser-extension/firefox/injects/: cctv.js  registry.js
chrome-extension/: README.md
src/: App.css  App.tsx  RootApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  downloader.rs  error.rs  ffmpeg.rs  fix_path.rs  lib.rs  live_recorder.rs  main.rs  models.rs  persistence.rs  playback.rs  preview.rs  remux.rs  state.rs  update.rs
src/components/: BatchDownloadModal.tsx  DownloadList.tsx  EdgeIcon.tsx  NewDownloadModal.tsx  NewLiveRecordModal.tsx  PlaybackWindow.tsx  PreviewWindow.tsx  SettingsModal.tsx  Toolbar.tsx  ToolsModal.tsx  UpdateModal.tsx  VideoClipPicker.tsx  VideoPreviewModal.tsx
src/hooks/: useDisableDefaultContextMenu.ts  useDownloads.ts  useLiveRecords.ts
src/services/: api.ts
src/styles/: theme.ts
src/types/: index.ts  settings.ts
test-hls-server/: Cargo.toml  README.md
test-hls-server/src/: main.rs
