[package]
name = "test-hls-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
